istio/destinationrule.yaml
# This file defines a DestinationRule for the userapi service in Istio.
# It specifies subsets for different versions of the service, allowing traffic routing based on version labels. 

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: userapi
spec:
  host: userapi-service
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
